# basic_flask

./: .gitignore  README.md  app.py  pyproject.toml
app/: app.py
app/flask_admin_basic/: app.py  readme.md
app/flask_admin_basic/admin/: __init__.py
app/flask_blueprint/: app.py  readme.md
app/flask_blueprint/blueprint/: main.py
app/flask_bootstrap/: app.py  readme.md
app/flask_bootstrap/templates/: index.html
app/flask_consumer_api_cep/: app.py  readme.md
app/flask_consumer_api_cep/templates/: index.html  response.html
app/flask_crud_sqlalchemy/: app.py  readme.md
app/flask_crud_sqlalchemy/templates/: create.html  index.html  update.html
app/flask_debug_toolbar/: app.py  readme.md
app/flask_download_youtube/: app.py  readme.md
app/flask_download_youtube/templates/: index.html
app/flask_flash_message/: app.py  readme.md
app/flask_flash_message/templates/: index.html
app/flask_link_whatsapp/: app.py  readme.md
app/flask_link_whatsapp/templates/: index.html
app/flask_login_basic/: app.py  readme.md
app/flask_login_basic/templates/: index.html  login.html  register.html
app/flask_profiler/: app.py  readme.md
app/flask_profiler/info/: README.md
app/flask_to_do_list/: app.py  readme.md
app/flask_to_do_list/templates/: index.html
app/flask_upload_basic/: app.py  readme.md
app/flask_upload_basic/templates/: upload.html
