[tool.poetry]
name = "modulos"
version = "0.1.0"
description = ""
authors = ["fellipematos <box.fellipematos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
flask-admin = "^1.6.1"
flask-profiler = "^1.8.1"
httpx = "^0.28.0"
flask-debugtoolbar = "^0.16.0"
bootstrap-flask = "^2.4.1"
flask-socketio = "^5.4.1"
pytubefix = "^8.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
